# pomodoro-timer

./: .gitignore  README.md  pyproject.toml  pytest.ini
pomodoro/: settings.py  urls.py
pomodoro/core/: apps.py  serializers.py  views.py
pomodoro/core/tests/: test_serializer.py  test_views.py
